[gd_scene load_steps=5 format=3 uid="uid://bi8c77g3wthvg"]

[ext_resource type="Texture2D" uid="uid://c3bg04out2sfy" path="res://assets/mystic_woods_free_2.1/sprites/objects/crate.png" id="1_c0acv"]
[ext_resource type="Script" path="res://scripts/objects/crate.gd" id="1_el8ev"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_slpas"]
size = Vector2(14, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7jl8"]
size = Vector2(24, 19)

[node name="crate" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_el8ev")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_c0acv")

[node name="Collision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_slpas")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_a7jl8")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0.411765, 0.894118, 0.12549, 1)
offset_left = -6.0
offset_top = 7.0
offset_right = 114.0
offset_bottom = 34.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
